main.css
* {
    box-sizing: border-box;
  }

body {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 15px;
    padding: 0px;
    margin: 0px;
    background-color: white;
  }

a {
    text-decoration: none;
    font-family: 'Roboto Mono', monospace;
    font-weight: 400;
}

header {
    display: flex;
    justify-content: center;
}

div.header-container {
    height: 120px;
    width: 100%;
    max-width: 1200px;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    padding-left: 20px;
    padding-right: 20px;
}

header img {
    width: 46px;
    height: 46px;
    margin-right: auto;
}

header a {
    color: #4000ff;
    margin-left: 30px;
}

section.banner {
    height: auto;
    width: 100%;
    padding-left: 20px;
    padding-right: 20px;
}

div.hero {
    height: auto;
    display: flex;
    flex-direction: column;
    margin-top: 80px;
    margin-bottom: 80px;
    min-width: 280px;
}

h1.hero {
    margin: 0px 0px 34px 0px;
    font-size: 1.8em;
    font-weight: 600;
    line-height: 146.5%;
    max-width: 640px;
}

a.hero {
    color: #4000ff;
    font-size: .87em;
    line-height: 152.3%;
}

div.link-box {
    position: relative;
    height: auto;
}

.custom-underline::after {
    content: "";
    position: absolute;
    top: 24px;
    left: 0px;
    height: 1px;
}

.hero.custom-underline::after {
    width: 95px;
    background-color: #4000ff;
}

.contact.custom-underline::after {
    width: 183px;
    background-color: white;
}

div#portrait {
    width: auto;
    height: auto;
}

div#portrait > img {
    width: 100%;
    max-width: 400px;
    height: auto;
}

section.project-section {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-top: 40px;
    padding-bottom: 40px;
    padding-left: 20px;
    padding-right: 20px;
}

div.project-container {
    width: 100%;
    max-width: 1300px;
    height: auto;
    background-color: #0d023b;
}

div.project-text-container {
    display: flex;
    flex-direction: column;
    padding: 30px 25px 0px 25px;
}

h2.project-title {
    font-family: 'Roboto Mono', monospace;
    font-size: 1em;
    font-weight: 400;
    line-height: 130%;
    margin: 0px 0px 20px 0px;
    color: white;
}

.project-container p {
    font-weight: 300;
    font-size: 0.9em; 
    line-height: 152.3%;
    letter-spacing: .04em;
    width: auto;
    margin: 0px 0px 28px 0px;
    color: white;
}

.project-container a {
    color: white;
    font-size: 1em;
    margin: 0px 0px 22px 0px;
    width: 150px;
}

img.project-image {
    height: auto;
    width: 100%;
    max-width: 511px;
    vertical-align: bottom;
}

section.about-section {
    width: 100%;
    height: auto;
    background-color: #4000ff;
    color: white;
    padding-left: 20px;
    padding-right: 20px;
}

div.about-container {
    width: 100%;
    max-width: 1200px;
    height: auto;
}

h2.contact {
    margin: 0px 0px 18px 0px;
    padding-top: 80px;
    font-size: 1.8em;
    font-weight: 600;
    line-height: 146.5%;
    color: white;
}

.about-section a {
    color: white;
    font-size: .87em;
}

p.about {
    font-size: 1em;
    font-weight: 300;
    line-height: 152.3%;
    letter-spacing: .04em;
    width: auto;
    margin-top: 80px;
    margin-bottom: 0px;
    padding-bottom: 80px;
}

footer {
    width: 100%;
    height: 100px;
    background-color: #4000ff;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    border-top: .5px solid white;
}

footer > a {
    color: white;
    margin: 0px 15px 0px 15px;
}

a.custom-underline:hover::after,
a.custom-underline:focus::after {
    background-color: #F24E1E;
}

a:hover, a:focus {
    color: #F24E1E;
}

/* Responsive */

@media screen and (min-width: 768px) {

    div.header-container {
        padding-left: 60px;
        padding-right: 60px;
    }
    
    div.hero {
        margin-top: 150px;
        margin-right: 50px;
    }

    h1.hero {
        margin: 0px 0px 60px 0px;
        font-size: 2em;
    }

    section.banner {
        height: auto;
        width: 100%;
        padding-left: 60px;
        padding-right: 60px;
        display: flex;
        flex-direction: row;
    }
    
    a.hero {
        font-size: 1em;
    }

    div#portrait > img {
        width: 224.5px;
        height: 271px;
        margin-top: 150px;
    }

    .custom-underline::after {
        top: 26px;
        left: 0px;
    }

    .hero.custom-underline::after {
        width: 110px;
    }

    .contact.custom-underline::after {
        width: 210px;
    }

    section.project-section {
        padding-left: 30px;
        padding-right: 30px;
    }

    div.project-container {
        display: flex;
        flex-direction: row;
        align-items: center;
        min-height: 300px;
        padding: 30px 40px 30px 40px;
    }

    div.project-text-container {
        display: inline-block;
        padding: 0px 50px 0px 0px;
    }

    h2.project-title {
        font-size: 1em;
        font-weight: 400;
        line-height: 130%;
        margin: 0px 0px 20px 0px;
    }

    .project-container p {
        font-size: 1em; 
        width: auto;
    }

    .project-container a {
        margin: 0px 30px 0px 0px;
        width: 150px;
    }

    img.project-image {
        height: 100%;
        width: auto;
    }

    section.about-section {
        padding-left: 60px;
        padding-right: 60px;
        display: flex;
        justify-content: center;
    }

    div.about-container {
        width: 100%;
        max-width: 1200px;
        height: auto;
        display: flex;
        flex-direction: row;
        justify-content: center;
    }
    

    div.contact-container {
        margin-right: 80px;
    }

    p.about {
        width: auto;
        align-self: flex-end;
    }

    .about-section a {
        font-size: 1em;
    }

    footer {
        width: 100%;
        height: 150px;
    }
    
    footer > a {
        margin: 0px 25px 0px 25px;
    }
}

@media screen and (min-width: 1000px) {

    section.banner {
        justify-content: center;
    }

    h1.hero {
        margin: 0px 0px 60px 0px;
        font-size: 2.67em;
    }

    a.hero {
        font-size: 1.1em;
    }

    .hero.custom-underline::after {
        width: 120px;
    }

    .contact.custom-underline::after {
        width: 230px;
    }

    .custom-underline::after {
        top: 30px;
        left: 0px;
    }

    div.hero {
        margin-top: 175px;
        margin-right: 80px;
    }

    div#portrait > img {
        margin-top: 170px;
        max-width: 275px;
        height: auto;
        width: 100%;
    }

    section.project-section {
        align-items: center;
    }

    h2.project-title {
        font-size: 1.4em;
    }

    div.project-container {
        padding: 30px 80px 30px 80px;
    }

    .project-container p {
        font-size: 1.1em; 
    }

    .project-container a {
        font-size: 1.1em;
        margin: 0px 40px 0px 0px;
    }

    div.contact-container {
        margin-right: 160px;
    }

    h2.contact {
        margin: 0px 0px 18px 0px;
        padding-top: 175px;
        font-size: 2.67em;
    }

    .about-section a {
        font-size: 1.1em;
    }

    p.about {
        font-size: 1.4em;
        width: auto;
        max-width: 700px;
        margin-top: 175px;
        margin-bottom: 175px;
        padding: 0;
    }

    footer {
        height: 200px;
    }
}

@media screen and (min-width: 1120px) {

    div.hero {
        margin-right: 150px;
    }

}

@media screen and (min-width: 1300px) {

    div.project-container {
        padding: 30px 80px 30px 110px;
    }

}

